# dummylib

./: .gitignore  CMakeLists.txt  README.md
include/: dummy-module.hpp
src/: CMakeLists.txt  dummy-module.cpp
