SET(LIBRARY_NAME ${PROJECT_NAME})


# Source files - Add here your source files
SET(${LIBRARY_NAME}_SOURCES
  dummy-module.cpp
)


SET(${LIBRARY_NAME}_FILES
	${${LIBRARY_NAME}_SOURCES}
	${${LIBRARY_NAME}_HEADERS}
	)


ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${LIBRARY_NAME}_SOURCES})
set_property(TARGET ${LIBRARY_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

SET(CMAKE_INSTALL_LIBDIR lib)
INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
